apps/wallabag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/wallabag/data
              name: wallabag-data
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: wallabag-data
          persistentVolumeClaim:
            claimName: wallabag-data
