apps/wallabag/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: wallabag
  type: ClusterIP
