apps/wallabag/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    cf.containeroo.ch/type: CNAME
    cf.containeroo.ch/content: ${BASE_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: wallabag.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  name: http
